--- a/stylesheets/my-cart.css
+++ b/stylesheets/my-cart.css
@@ -42,6 +42,7 @@ section.s1 {
 
 table {
   margin: auto;
+  min-width: 900px;
   /* border: 1px solid yellow; */
 }
 table thead {
@@ -56,6 +57,12 @@ table th {
 }
 table td {
   border-bottom: 2px solid darkorange;
+}
+
+.td-noitem {
+  text-align: center; 
+  padding: 1.5em;
+  font-size: 1.2em;
 }
 
 .td-img {
@@ -127,4 +134,58 @@ table td {
   font-size: 1.2em;
   font-weight: bold;
   padding: 0.8em 3.6em;
+}
+
+#checkout_wrapper {
+  z-index: 999;
+  background: rgba(0, 0, 0, 0.6);
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#checkout_dialog {
+  width: 425px;
+  height: 410px;
+  background: white;
+  padding: 1em;
+  text-align: center;
+  border-radius: 15px;
+}
+#checkout_dialog #div_dialog_closer {
+  text-align: right;
+}
+#checkout_dialog #dialog_closer {
+  height: 20px;
+  cursor: pointer;
+  opacity: 0.65;
+}
+#checkout_dialog #dialog_closer:hover {
+  opacity: 1;
+}
+#checkout_dialog h1 {
+  display: inline-block;
+  font-size: 2.5em;
+  margin: 0.1em 0 0.75em 0;
+  border-bottom: 6px solid crimson;
+}
+#checkout_dialog span {
+  display: inline-block;
+  font-size: 1.5em;
+  padding: 0.5em 0;
+  width: 180px;
+}
+#checkout_dialog span:nth-child(odd) {
+  text-align: left;
+}
+#checkout_dialog span:nth-child(even) {
+  text-align: right;
+}
+#checkout_dialog button {
+  font-size: 1.2em;
+  font-weight: bold;
+  padding: 0.75em 3em;
+  margin-top: 1em;
 }
