--- a/stylesheets/product-catalog.css
+++ b/stylesheets/product-catalog.css
@@ -57,9 +57,10 @@ section.s1 {
 
 .product-card {
   background: white;
-  filter: drop-shadow(0.5mm 2mm 2mm rgba(0, 0, 0, 0.25));
+  filter: drop-shadow(0mm 1mm 2.5mm rgba(0, 0, 0, 0.25));
   padding-bottom: 0.025em;
   border-radius: 10px;
+  padding-top: 1em;
 }
 .img-link {
   display: block;
@@ -68,18 +69,21 @@ section.s1 {
   width: 280px;
   height: 180px;
   background-repeat: no-repeat;
-  background-size: auto 280px;
+  background-size: contain;
+  background-position: center bottom;
 }
 .product-card p:nth-of-type(1) {
   text-align: center;
   padding-top: 0.2em;
   padding-bottom: 0em;
-  font-size: 2em;
+  font-size: 1.75em;
+  width: 280px;
 }
 .product-card p:nth-of-type(2) {
   text-align: center;
   padding: 0.3em 0;
   color: gray;
+  width: 280px;
 }
 .product-card p:nth-of-type(3) {
   text-align: center;
