--- a/views/category.html
+++ b/views/category.html
@@ -54,7 +54,7 @@
         <span>COFFEE BEAN</span>
       </div>
       <div class="button-link">
-        <a href="#">View All</a>
+        <a href="./product-catalog.html?category=Coffee Bean">View All</a>
       </div>
     </div>
     <br>
@@ -66,7 +66,7 @@
         <span>COFFEE GRINDER</span>
       </div>
       <div class="button-link">
-        <a href="#">View All</a>
+        <a href="./product-catalog.html?category=Coffee Grinder">View All</a>
       </div>
     </div>
     <br>
@@ -78,7 +78,7 @@
         <span>COFFEE MAKER</span>
       </div>
       <div class="button-link">
-        <a href="#">View All</a>
+        <a href="./product-catalog.html?category=Coffee Maker">View All</a>
       </div>
     </div>
     <br>
@@ -90,7 +90,7 @@
         <span>COFFEE TUMBLERS</span>
       </div>
       <div class="button-link">
-        <a href="#">View All</a>
+        <a href="./product-catalog.html?category=Coffee Tumbler">View All</a>
       </div>
     </div>
   </main>
