--- a/stylesheets/category.css
+++ b/stylesheets/category.css
@@ -8,7 +8,7 @@
 body {
   width: 100%;
   font-family: 'Raleway', sans-serif;
-  background-color: white;
+  background-color: rgba(240, 240, 240, 1);
 }
 .bg-dot {
   margin-top: -35px;
@@ -64,12 +64,13 @@ body {
 main {
   width: 80%;
   margin: auto;
+  padding-bottom: 1em;
 }
 .category-product {
   width: 80%;
-  margin: auto;
+  margin: 0.8em auto;
   background: whitesmoke;
-  filter: drop-shadow(0.5mm 2mm 2mm rgba(0, 0, 0, 0.25));
+  filter: drop-shadow(0mm 0.5mm 2mm rgba(0, 0, 0, 0.25));
   padding-bottom: 55px;
   border-radius: 10px;
 }
