--- a/stylesheets/product-catalog.css
+++ b/stylesheets/product-catalog.css
@@ -9,21 +9,23 @@ span.title-text {
 
 /* header */
 header {
-  background: linear-gradient(to bottom, rgba(60, 60, 60, 0.5), rgba(60, 60, 60, 0.4)),
-              url(../res/images/wallpaper/self-harvest-coffee-beans.jpg);
-  background-attachment: fixed;
-  height: 280px;
-  background-size: cover;
+  
 }
 header section h1 {
   color: white;
   font-weight: bold;
-  font-size: 4.5em;
+  font-size: 4em;
   text-align: center;
 }
 header section {
+  box-sizing: border-box;
+  background: linear-gradient(to bottom, rgba(60, 60, 60, 0.5), rgba(60, 60, 60, 0.4)),
+              url(../res/images/wallpaper/self-harvest-coffee-beans.jpg);
+  height: 280px;
+  background-attachment: fixed;
+  background-size: cover;
   display: block;
-  padding-top: 7em;
+  padding-top: 6.5em;
 }
 header section p {
   color: white;
@@ -33,15 +35,13 @@ header section p {
 
 body {
   background-color: rgb(245, 245, 245);
+  text-align: center;
 }
 body > h1 {
-  text-align: center;
+  display: inline-block;
   padding-top: 1em;
   font-size: 3em;
-  width: 7em;
-  margin: auto;
   border-bottom: 0.15em solid crimson;
-  background-color: rgb(245, 245, 245);
 }
 
 section.s1 {
