--- a/views/my-cart.html
+++ b/views/my-cart.html
@@ -43,7 +43,7 @@
   <nav id="nav" class="first-nav">
     <div class="nav-container">
       <div class="nav-left">
-        <a href="index.html"><img src="../res/images/icons/another-coffee.png" alt=""> Kuffee</a>
+        <a href="../index.html"><img src="../res/images/icons/another-coffee.png" alt=""> Kuffee</a>
       </div>
       <div class="nav-right">
         <a href="./category.html"><img src="../res/images/icons/inbox-white.png" alt=""> Category</a>
@@ -52,7 +52,7 @@
         <button id="btn_login" class="btn btn-medium btn-blue" type="button" style="display:none">Login</button>
         <button id="btn_signup" class="btn btn-medium btn-blue-hollow" type="button" style="display:none">Sign Up</button>
         <span id="span_user" class="btn btn-medium span-profile" type="button" style="display:none">Irvin Delano</span>
-        <button id="btn_logout" class="btn btn-medium btn-crimson-hollow" type="button" style="display:none">Logout</button>
+        <button id="btn_logout" class="btn btn-medium btn-orange-hollow" type="button" style="display:none">Logout</button>
       </div>
     </div>
   </nav>
@@ -108,7 +108,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr><td class="td-noitem" colspan="6">No item in Cart yet.</td></tr>
+        <tr><td class="td-noitem" colspan="6">*No item in Cart yet*</td></tr>
         <!-- <tr>
           <td class="td-img">
             <div class="div-img" style="background-image:url(../res/images/coffee-bean/coffee-bean-2.jpg)"></div>
