--- a/views/product-catalog.html
+++ b/views/product-catalog.html
@@ -14,70 +14,56 @@
 </head>
 
 <body>
-  <nav id="nav" class="first-nav">
-    <div class="nav-container">
-      <div class="nav-left">
-        <a href="index.html">
-          <img src="../res/images/icons/another-coffee.png" alt=""> Kuffee</a>
-      </div>
-      <div class="nav-right">
-        <a href="./category.html">
-          <img src="../res/images/icons/inbox-white.png" alt=""> Category</a>
-        <a id="link_wishlist" href="./wishlist.html">
-          <img src="../res/images/icons/heart-white.png" alt=""> Wishlist</a>
-        <a id="link_mycart" href="./my-cart.html">
-          <img src="../res/images/icons/cart-white.png" alt=""> My Cart</a>
-        <button id="btn_login" class="btn btn-medium btn-blue" type="button" style="display:none">Login</button>
-        <button id="btn_signup" class="btn btn-medium btn-blue-hollow" type="button" style="display:none">Sign Up</button>
-        <span id="span_user" class="btn btn-medium span-profile" type="button" style="display:none">Irvin Delano</span>
-        <button id="btn_logout" class="btn btn-medium btn-orange-hollow" type="button" style="display:none">Logout</button>
-      </div>
-    </div>
-  </nav>
-  <div id="form_platform" style="display:none;">
-    <div id="div_login_form" style="display:none;">
-      <header>
-        <div class="div-closer">
-          <img class="closer" src="../res/images/icons/close-slim.png">
+    <nav id="nav" class="first-nav">
+      <div class="nav-container">
+        <div class="nav-left">
+          <a href="../index.html"><img src="../res/images/icons/another-coffee.png" alt=""> Kuffee</a>
         </div>
-        <h1>
-          <img src="../res/images/icons/another-coffee.png"> Kuffee</h1>
-      </header>
-      <form action="">
-        <input type="email" placeholder="Email" required>
-        <input type="password" placeholder="Password" required>
-        <button type="submit" class="btn btn-blue btn-medium">LOGIN</button>
-        <p>Don't have an account?
-          <span id="btn_signup_first">Sign Up!</span>
-        </p>
-      </form>
-    </div>
-    <div id="div_signup_form" style="display:none;">
-      <header>
-        <div class="div-closer">
-          <img class="closer" src="../res/images/icons/close-slim.png">
+        <div class="nav-right">
+          <a href="./category.html"><img src="../res/images/icons/inbox-white.png" alt=""> Category</a>
+          <a id="link_wishlist" href="./wishlist.html"><img src="../res/images/icons/heart-white.png" alt=""> Wishlist</a>
+          <a id="link_mycart" href="./my-cart.html"><img src="../res/images/icons/cart-white.png" alt=""> My Cart</a>
+          <button id="btn_login" class="btn btn-medium btn-blue" type="button" style="display:none">Login</button>
+          <button id="btn_signup" class="btn btn-medium btn-blue-hollow" type="button" style="display:none">Sign Up</button>
+          <span id="span_user" class="btn btn-medium span-profile" type="button" style="display:none">Irvin Delano</span>
+          <button id="btn_logout" class="btn btn-medium btn-orange-hollow" type="button" style="display:none">Logout</button>
         </div>
-        <h1>
-          <img src="../res/images/icons/another-coffee.png"> Kuffee</h1>
-      </header>
-      <form action="">
-        <input type="text" placeholder="Username" required>
-        <input type="email" placeholder="Email" required>
-        <input type="password" placeholder="Password" required>
-        <button type="submit" class="btn btn-orange btn-medium">SIGN UP</button>
-        <p>Already have an account?
-          <span id="btn_login_first">Login!</span>
-        </p>
-      </form>
+      </div>
+    </nav>
+    <div id="form_platform" style="display:none;">
+      <div id="div_login_form" style="display:none;">
+        <header>
+          <div class="div-closer">
+            <img class="closer" src="../res/images/icons/close-slim.png">
+          </div>
+          <h1><img src="../res/images/icons/another-coffee.png"> Kuffee</h1>
+        </header>
+        <form action="">
+          <input type="email" placeholder="Email" required>
+          <input type="password" placeholder="Password" required>
+          <button type="submit" class="btn btn-blue btn-medium">LOGIN</button>
+          <p>Don't have an account? <span id="btn_signup_first">Sign Up!</span></p>
+        </form>
+      </div>
+      <div id="div_signup_form" style="display:none;">
+        <header>
+          <div class="div-closer">
+            <img class="closer" src="../res/images/icons/close-slim.png">
+          </div>
+          <h1><img src="../res/images/icons/another-coffee.png"> Kuffee</h1>
+        </header>
+        <form action="">
+          <input type="text" placeholder="Username" required>
+          <input type="email" placeholder="Email" required>
+          <input type="password" placeholder="Password" required>
+          <button type="submit" class="btn btn-orange btn-medium">SIGN UP</button>
+          <p>Already have an account? <span id="btn_login_first">Login!</span></p>
+        </form>
+      </div>
     </div>
-  </div>
 
   <header>
-    <section>
-      <h1>Self-Harvested Coffee Beans</h1>
-      <p>We plant and take care each of our coffee beans as they were our children.
-      </p>
-    </section>
+    
   </header>
 
   <h1>Coffee Beans</h1>
@@ -105,13 +91,32 @@
   <script src="../scripts/nav.js"></script>
   <script src="../scripts/form.js"></script>
   <script src="../scripts/coffee-product-db.js"></script>
+  <script src="../scripts/coffee-category-db.js"></script>
   <script src="../scripts/db-reader.js"></script>
   <script>
-    let productCategory = __.getParameterByName('category', window.location);
-    let db = new DBReader(CoffeeProductDB);
-    let documents = db.getByCategory(productCategory);
 
-    (function renderProductContainer(documents) {
+    (function renderHeader() {
+      let productCategory = __.getParameterByName('category', window.location);
+      let db = new DBReader(CoffeeCategoryDB);
+      let documents = db.getByCategory(productCategory);
+      let $productContainer = $('#product_container');
+      let renderHeaderSection = ejs.compile(
+        `
+          <section style="background-image:url(../res/images/<%= doc.imageUrl %>)">
+            <h1><%= doc.title %></h1>
+            <p><%= doc.desc %></p>
+          </section>
+        `
+      );
+      $('body > header').html(renderHeaderSection({doc: documents[0]}));
+      $('body > h1').text(documents[0].name)
+    })();
+
+    (function renderProductContainer() {
+      let productCategory = __.getParameterByName('category', window.location);
+      let db = new DBReader(CoffeeProductDB);
+      let documents = db.getByCategory(productCategory);
+
       let $productContainer = $('#product_container');
       let renderCard = ejs.compile(
         `
@@ -138,7 +143,7 @@
         }
         $productContainer.append($row);
       }
-    })(documents);
+    })();
 
     (function buttonEventHandler() {
       $('.btn-add-cart').click(function() {
