--- a/views/wishlist.html
+++ b/views/wishlist.html
@@ -10,10 +10,13 @@
   <link rel="stylesheet" href="../stylesheets/bootsandcats.css">
   <link rel="stylesheet" href="../stylesheets/nav.css">
   <link rel="stylesheet" href="../stylesheets/form.css">
+  <link rel="stylesheet" href="../stylesheets/toaster.css">
   <link rel="stylesheet" href="../stylesheets/wishlist.css ">
 </head>
 
 <body>
+    <section id="section_toaster"></section>
+
     <nav id="nav" class="first-nav">
       <div class="nav-container">
         <div class="nav-left">
@@ -92,6 +95,7 @@
   <script src="../scripts/ejs.min.js"></script>
   <script src="../scripts/coffee-product-db.js"></script>
   <script src="../scripts/db-reader.js"></script>
+  <script src="../scripts/toaster.js"></script>
   <script src="../scripts/nav.js"></script>
   <script src="../scripts/form.js"></script>
   <script>
@@ -145,6 +149,7 @@
         user.wishMap[productID] = 0;
         Cookies.set('user', user, {expires: 30});
         $parentBox.fadeOut('normal');
+        toaster.show('Added to Cart', 'cornflowerblue');
       });
       
       $('.closer').click(function() {
@@ -159,6 +164,7 @@
             $('#p_empty').show();
           }
         });
+        toaster.show('Item removed', 'cornflowerblue');
       });
     })();
   </script>
